# mixxx-plugin-librespot

./: .gitignore  Cargo.toml  README.md  build.rs
res/qml/: main.qml
src/: main.rs
src/audio/: loader.rs  track.rs
src/view/: login.rs
